--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 #lonelyheartbanner{background:url(/lonelyheart/lonelyheartbanner.png) no-repeat;width:500px;height:100px;background-size:500px 100px}
 #lonelyheartbanner2{background:url(/lonelyheart/lonelyheartbanner2.gif) no-repeat;width:500px;height:100px;background-size:500px 100px}
 #lonelyheartbanner,#lonelyheartbanner2{border:1px solid rgba(0,0,0,0.3);border-radius:6px;box-shadow:0px 1px 2px rgba(0,0,0,0.2)}@media screen and (min-resolution: 1.5dppx), screen and (-webkit-min-device-pixel-ratio: 1.5){#itsycalbanner{background:url(/itsycal/itsycalbanner@2x.png) no-repeat;width:500px;height:108px;background-size:500px 108px}#itsycalbanner2{background:url(/itsycal/itsycalbanner2@2x.png) no-repeat;width:500px;height:410px;background-size:500px 410px}#itsycalmenuextra{background:url(/itsycal/menuextra@2x.gif) no-repeat;width:500px;height:60px;background-size:500px 60px}#snakebanner{background:url(/snake/snakebanner@2x.png) no-repeat;width:500px;height:100px;background-size:500px 100px}
-#snkbanner{
+#ktoebanner{
     background:url(/materials/ktoe@2x.png) 
     no-repeat;
     width:500px;
