--- a/style.css
+++ b/style.css
@@ -139,58 +139,24 @@ nav ul li {
 	background-size: 500px 108px
 }
 #rpgbanner2 {
-	background: url(/itsycal/itsycalbanner2.png) no-repeat;
+	background: url(static/rpg@2x.png) no-repeat;
 	width: 500px;
 	height: 410px;
 	background-size: 500px 410px
 }
-#itsycalmenuextra {
-	background: url(/itsycal/menuextra.gif) no-repeat;
-	width: 500px;
-	height: 60px;
-	background-size: 500px 60px
-}
-#snakebanner {
-	background: url(/snake/snakebanner.png) no-repeat;
-	width: 500px;
-	height: 100px;
-	background-size: 500px 100px
-}
 #ktoebanner {
-	background: url(/snk/snkbanner.png) no-repeat;
+	background: url(/static/ktoe@2x.png) no-repeat;
 	width: 500px;
 	height: 108px;
 	background-size: 500px 108px
 }
 #ktoebanner2 {
-	background: url(/snk/snkbanner2.gif) no-repeat;
+	background: url(/static/ktoe@2x.png) no-repeat;
 	width: 500px;
 	height: 280px;
 	background-size: 500px 280px
 }
-#ttbanner {
-	background: url(/tickertool/ttbanner.png) no-repeat;
-	width: 500px;
-	height: 90px;
-	background-size: 500px 90px
-}
-#lonelyheartbanner {
-	background: url(/lonelyheart/lonelyheartbanner.png) no-repeat;
-	width: 500px;
-	height: 100px;
-	background-size: 500px 100px
-}
-#lonelyheartbanner2 {
-	background: url(/lonelyheart/lonelyheartbanner2.gif) no-repeat;
-	width: 500px;
-	height: 100px;
-	background-size: 500px 100px
-}
-#lonelyheartbanner, #lonelyheartbanner2 {
-	border: 1px solid rgba(0, 0, 0, 0.3);
-	border-radius: 6px;
-	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2)
-}
+
 @media screen and (min-resolution: 1.5dppx), screen and (-webkit-min-device-pixel-ratio: 1.5) {
 	#rpgbanner {
 		background: url(/static/rpg@2x.png) no-repeat;
@@ -199,22 +165,10 @@ nav ul li {
 		background-size: 500px 108px
 	}
 	#rpgbanner2 {
-		background: url(/itsycal/itsycalbanner2@2x.png) no-repeat;
+		background: url(/static/rpg@2x.png) no-repeat;
 		width: 500px;
 		height: 410px;
 		background-size: 500px 410px
-	}
-	#itsycalmenuextra {
-		background: url(/itsycal/menuextra@2x.gif) no-repeat;
-		width: 500px;
-		height: 60px;
-		background-size: 500px 60px
-	}
-	#snakebanner {
-		background: url(/snake/snakebanner@2x.png) no-repeat;
-		width: 500px;
-		height: 100px;
-		background-size: 500px 100px
 	}
 	#ktoebanner {
 		background: url(/static/ktoe@2x.png) no-repeat;
@@ -223,28 +177,10 @@ nav ul li {
 		background-size: 500px 108px
 	}
 	#ktoebanner2 {
-		background: url(/snk/snkbanner2@2x.gif) no-repeat;
+		background: url(/static/ktoe@2x.png) no-repeat;
 		width: 500px;
 		height: 280px;
 		background-size: 500px 280px
-	}
-	#ttbanner {
-		background: url(/tickertool/ttbanner@2x.png) no-repeat;
-		width: 500px;
-		height: 90px;
-		background-size: 500px 90px
-	}
-	#lonelyheartbanner {
-		background: url(/lonelyheart/lonelyheartbanner@2x.png) no-repeat;
-		width: 500px;
-		height: 100px;
-		background-size: 500px 100px
-	}
-	#lonelyheartbanner2 {
-		background: url(/lonelyheart/lonelyheartbanner2@2x.gif) no-repeat;
-		width: 500px;
-		height: 100px;
-		background-size: 500px 100px
 	}
 }
 @media screen and (max-width: 552px) {
@@ -253,11 +189,11 @@ nav ul li {
 		margin-bottom: 20px;
 		width: 90%
 	}
-	#rpgbanner, #rpgbanner2, #itsycalmenuextra {
+	#rpgbanner, #rpgbanner2 {
 		background-position: right center;
 		width: 100%
 	}
-	#snakebanner, #ktoebanner, #ktoebanner2, #ttbanner, #lonelyheartbanner, #lonelyheartbanner2 {
+	#ktoebanner, #ktoebanner2 {
 		background-position: left center;
 		width: 100%
 	}
