--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @font-face {
 	font-family: 'msr500';
 	src: url("/static/fonts/MuseoSansRounded-500-webfont.eot");
-	src: url("/static/fonts/MuseoSansRounded-500-webfont.eot") format("embedded-opentype"), url("/static/fonts/MuseoSansRounded-500-webfont.woff2") format("woff2"), url("/static/fonts/MuseoSansRounded-500-webfont.woff") format("woff"), url("/static/fonts/MuseoSansRounded-500-webfont.ttf") format("truetype"), url("/static/fonts/MuseoSansRounded-500-webfont.svg") format("svg");
+	src: url("/static/fonts/MuseoSansRounded-500-webfont.eot?#iefix") format("embedded-opentype"), url("/static/fonts/MuseoSansRounded-500-webfont.woff2") format("woff2"), url("/static/fonts/MuseoSansRounded-500-webfont.woff") format("woff"), url("/static/fonts/MuseoSansRounded-500-webfont.ttf") format("truetype"), url("/static/fonts/MuseoSansRounded-500-webfont.svg") format("svg");
 	font-weight: normal;
 	font-style: normal
 }
