upload rabbling project

--- a/style.css
+++ b/style.css
@@ -173,6 +173,18 @@ nav ul li {
 	height: 280px;
 	background-size: 500px 280px
 }
+#rabblingbanner {
+	background: url(/static/rabbling@2x.svg) no-repeat;
+	width: 500px;
+	height: 108px;
+	background-size: 500px 108px
+}
+#rabblingbanner2 {
+	background: url(/static/rabbling@2x.svg) no-repeat;
+	width: 500px;
+	height: 280px;
+	background-size: 500px 280px
+}
 
 @media screen and (min-resolution: 1.5dppx), screen and (-webkit-min-device-pixel-ratio: 1.5) {
 	#rpgbanner {
@@ -211,6 +223,18 @@ nav ul li {
         height: 280px;
         background-size: 500px 280px
     }
+    #rabblingbanner {
+        background: url(/static/rabbling@2x.svg) no-repeat;
+        width: 500px;
+        height: 108px;
+        background-size: 500px 108px
+    }
+    #rabblingbanner2 {
+        background: url(/static/rabbling@2x.svg) no-repeat;
+        width: 500px;
+        height: 280px;
+        background-size: 500px 280px
+    }
 }
 @media screen and (max-width: 552px) {
 	#bigbox {
@@ -227,6 +251,10 @@ nav ul li {
 		width: 100%
 	}
     #moviebanner, #moviebanner2 {
+		background-position: left center;
+		width: 100%
+	}
+    #rabblingbanner, #rabblingbanner2 {
 		background-position: left center;
 		width: 100%
 	}
