add meta report section on hompage

--- a/style.css
+++ b/style.css
@@ -187,6 +187,18 @@ nav ul li {
   height: 280px;
   background-size: 500px 280px
 }
+#metaReportbanner {
+  background: url(/static/metaReport@2x.svg) no-repeat;
+  width: 500px;
+  height: 108px;
+  background-size: 500px 108px
+}
+#metaReportbanner2 {
+  background: url(/static/metaReport@2x.svg) no-repeat;
+  width: 500px;
+  height: 280px;
+  background-size: 500px 280px
+}
 @media screen and (min-resolution: 1.5dppx), screen and (-webkit-min-device-pixel-ratio: 1.5) {
   #rpgbanner {
     background: url(/static/rpg@2x.svg) no-repeat;
@@ -236,6 +248,18 @@ nav ul li {
     height: 280px;
     background-size: 500px 280px
   }
+  #metaReportbanner {
+    background: url(/static/metaReport@2x.svg) no-repeat;
+    width: 500px;
+    height: 108px;
+    background-size: 500px 108px
+  }
+  #metaReportbanner2 {
+    background: url(/static/metaReport@2x.svg) no-repeat;
+    width: 500px;
+    height: 280px;
+    background-size: 500px 280px
+  }
 }
 @media screen and (max-width: 552px) {
   #bigbox {
@@ -256,6 +280,10 @@ nav ul li {
     width: 100%
   }
   #rabblingbanner, #rabblingbanner2 {
+    background-position: left center;
+    width: 100%
+  }
+  #metaReportbanner, #metaReportbanner2 {
     background-position: left center;
     width: 100%
   }
