updated bangumiN banner and resume

--- a/style.css
+++ b/style.css
@@ -199,6 +199,18 @@ nav ul li {
   height: 280px;
   background-size: 500px 280px
 }
+#banguminbanner {
+  background: url(/static/bangumiN@2x.svg) no-repeat;
+  width: 500px;
+  height: 108px;
+  background-size: 500px 108px
+}
+#banguminbanner2 {
+  background: url(/static/bangumiN@2x.svg) no-repeat;
+  width: 500px;
+  height: 280px;
+  background-size: 500px 280px
+}
 @media screen and (min-resolution: 1.5dppx), screen and (-webkit-min-device-pixel-ratio: 1.5) {
   #rpgbanner {
     background: url(/static/rpg@2x.svg) no-repeat;
@@ -260,6 +272,18 @@ nav ul li {
     height: 280px;
     background-size: 500px 280px
   }
+  #banguminbanner {
+    background: url(/static/bangumiN@2x.svg) no-repeat;
+    width: 500px;
+    height: 108px;
+    background-size: 500px 108px
+  }
+  #banguminbanner2 {
+    background: url(/static/bangumiN@2x.svg) no-repeat;
+    width: 500px;
+    height: 280px;
+    background-size: 500px 280px
+  }
 }
 @media screen and (max-width: 552px) {
   #bigbox {
@@ -284,6 +308,10 @@ nav ul li {
     width: 100%
   }
   #metaReportbanner, #metaReportbanner2 {
+    background-position: left center;
+    width: 100%
+  }
+  #banguminbanner, #banguminbanner2 {
     background-position: left center;
     width: 100%
   }
